# bag_of_visual_words

./: .gitignore  CMakeLists.txt  README.md
src/: KMeans.cpp  KMeans.hpp  comparison.cpp  main.cpp  preprocess.cpp
